save config secu